# stub_api

./: Cargo.toml
internal/: Cargo.toml
internal/src/: lib.rs  offsets.rs
script_macro/: Cargo.toml
script_macro/src/: lib.rs
src/: c_address.rs  c_vec.rs  lib.rs
src/api/: camera.rs  client.rs  display.rs  item_nodes.rs  mod.rs  varbits.rs  varps.rs  walking.rs  web_walking.rs
src/api/def/: item_definitions.rs  mod.rs  model_definitions.rs  npc_definitions.rs  object_definitions.rs
src/api/domain/: animable.rs  character.rs  chat_message.rs  convex_hull.rs  dynamic_object.rs  entity.rs  grand_exchange_offer.rs  graphics_object.rs  ground_decoration.rs  ground_item.rs  healthbar.rs  hint_arrow.rs  interactable_object.rs  item.rs  item_definition.rs  item_node.rs  menu_item.rs  mod.rs  model.rs  npc.rs  npc_definition.rs  object.rs  object_definition.rs  pending_spawn.rs  player.rs  player_definition.rs  projectile.rs  region.rs  varbit.rs  wall_decoration.rs  wall_object.rs  widget.rs  world_entity.rs  world_entity_config.rs  world_entity_transform.rs  world_view.rs
src/api/input/: input.rs  keyboard.rs  mod.rs  mouse.rs
src/api/input/platform/: mod.rs  windows_input.rs
src/api/scene/: characters.rs  collision_map.rs  convex_hull.rs  entities.rs  graphics_objects.rs  ground_items.rs  heightmap.rs  instance_template.rs  interactable.rs  map.rs  mod.rs  npcs.rs  objects.rs  pending_spawns.rs  player_owned_house.rs  players.rs  projectiles.rs  region.rs  world_entities.rs  world_view.rs
src/api/scene/coords/: area.rs  local_path_finder.rs  mod.rs  position.rs
src/api/scene/webwalker/: mod.rs  web_connection.rs  web_node.rs  web_path_finder.rs  web_player_profile.rs  web_region.rs  web_script.rs  web_teleport.rs
src/api/scene/webwalker/script/: agility.rs  barriers.rs  charter_ship.rs  fairy_ring.rs  glider.rs  mod.rs  quetzal.rs  spirit_tree.rs  stronghold_of_security.rs
src/api/script/: mod.rs  script.rs  script_metadata.rs  script_state.rs
src/api/ui/: bank.rs  chatbox.rs  deposit_box.rs  dialogue.rs  grand_exchange.rs  indexed_object_set.rs  menu.rs  minimap.rs  mod.rs  store.rs  trade.rs  widgets.rs
src/api/ui/tab/: combat.rs  diaries.rs  emotes.rs  equipment.rs  inventory.rs  logout.rs  magic.rs  mod.rs  prayer.rs  quests.rs  settings.rs  skills.rs  tabs.rs  world_switcher.rs
src/api/util/: bot.rs  cache.rs  database.rs  find_args.rs  lru_cache.rs  math.rs  mind.rs  mod.rs  performance.rs  price_lookup.rs  random.rs  randoms.rs  screen_capture.rs  user_override.rs  utils.rs  uuid_decoder.rs  world_loader.rs
src/api/util/projection/: bounding_box.rs  camera_info.rs  mod.rs  projection_info.rs  viewport.rs
