[package]
name = "osbot_api"
version = "231.1.0"
edition = "2021"

[lib]
name = "osbot_api"

[dependencies]
process-memory = "0.5.0"
rand = "0.9.0-beta.1"
rand_distr = "0.5.0-beta.2"
regex = "1.11.1"
strum = "0.27.1"
strum_macros = "0.27.1"
reqwest = { version = "0.12.12", features = ["blocking"] }
scraper = "0.22.0"
windows = { version = "0.61.1", features = ["Win32_UI_Input", "Win32_UI_WindowsAndMessaging", "Win32_UI_Input_KeyboardAndMouse", "Win32_Graphics", "Win32_Graphics_Gdi"] }
eframe = "0.31.1"
egui_extras = { version = "0.31.1", features = ["default", "all_loaders"] }
log = { version = "0.4.25", features = ["std", "max_level_info", "release_max_level_info"] }
chrono = "0.4"
rusqlite = { version = "0.33.0", features = ["bundled"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
flate2 = "1.1.0"
rustc-hash = "2.1.1"
noise = "0.9.0"

script_macro = { path = "script_macro", optional = true }

[features]
script = ["script_macro"]