[package]
name = "osbot_api"
version = "233.5.0"
edition = "2021"

[lib]
name = "osbot_api"

[dependencies]
process-memory = "0.5.0"
eframe = "0.31.1"
egui_extras = { version = "0.31.1", features = ["default", "all_loaders"] }
rand = "0.9.2"
rand_distr = "0.5.1"
regex = "1.11.1"
strum = "0.27.2"
strum_macros = "0.27.2"
reqwest = { version = "0.12.22", features = ["blocking"] }
scraper = "0.23.1"
windows = { version = "0.61.3", features = ["Win32_UI_Input", "Win32_UI_WindowsAndMessaging", "Win32_UI_Input_KeyboardAndMouse", "Win32_Graphics", "Win32_Graphics_Gdi"] }
log = { version = "0.4.27", features = ["std", "max_level_info", "release_max_level_info"] }
chrono = "0.4.41"
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
flate2 = "1.1.2"
rustc-hash = "2.1.1"
noise = "0.9.0"

script_macro = { path = "script_macro", optional = true }

[features]
script = ["script_macro"]